k8s/msa-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: lgcns

spec:
  template:
    spec:
      containers:
        - name: kafka-container
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
            - containerPort: 9093
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: lgcns
spec:
# 클러스터 내부에서 접근할 수 있는 IP 타입
  type: ClusterIP 
  ports:
  - name: outside #외부접속용 포트
    port: 9092
    targetPort: 9092
  - name: inside # 브로커 내부에서 통신용 사용하는 포트
    port: 9093
    targetPort: 9093
  selector:
    app: kafka
