k8s/msa-redis.yml
apiVersion: apps/v1

# 자원의 종류(Pod, Service, ReplicaSet, Deployment)
kind: Deployment

metadata:
  name: redis-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pod

  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      # docker container 
      containers:
        - name: redis-container
        # 혹, 실행중인 컨테이너를 이미지로 만들고 ecr 배포할 경우 ecr repo 주소사용 가능
          image: redis # nginx:1.21.6 -> nginx:1.21.1
          ports:
          - containerPort: 6379
---
# core service setting
# core group : pod, service, ConfigMap, Secret, namespace
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: lgcns
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-pod
